--- a/index.html
+++ b/index.html
@@ -39,23 +39,23 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                Happy birthday to youu!! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur quisquam amet ipsam vitae, voluptatum architecto aliquid id quo error tempora quos aperiam magni necessitatibus quas ut, possimus nesciunt nam ad.
+                Happy birthday acen lucu!! Semoga di umur sekarang kamu bisa capai semua yang kamu mau, lakuin hal yang belum pernah kamu lakuin sebelumnya. I wish you all the happiness, blessings, and all good things in life. I hope God will lessen your pain and turn it into a more beautiful thing.
                 </p>
                 <p class="fake-btn">Send</p>
             </div>
         </div>
 
         <div class="five">
-            <p class="idea-1">That's what I was going to do.</p>
-            <p class="idea-2">But then I stopped.</p>
+            <p class="idea-1">Awalnya mau ucapin gitu aja.</p>
+            <p class="idea-2">Tapi.</p>
             <p class="idea-3">
-                I realised, I wanted to do something<br>
-                <strong>special</strong>
+                Aku mau lebih ekstra biar<br>
+                <strong>spesial</strong>
                 .
             </p>
-            <p class="idea-4">Because,</p>
+            <p class="idea-4">Karena,</p>
             <p class="idea-5">
-                You are Special
+                Kamu Spesial ea
                 <span>:)</span>
             </p>
             <p class="idea-6">
@@ -69,7 +69,7 @@
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday!</h3>
-                <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+                <h5 id="wishText">May happiness always be with you! ;)</h5>
             </div>
         </div>
 
