--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     <div class="container">
         <div class="one">
             <h1 class="one">
-                Hi
-                <span id="name">Irene</span>
+                Haloo
+                <span id="name">ACENNNGG</span>
             </h1>
-            <p class="two" id="greetingText">I really like your name btw!</p>
+            <p class="two" id="greetingText">Hehe hey there my fav bday girl</p>
         </div>
 
         <div class="three">
